[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "composite-tangling"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "wj2", email = "wjeffreyjohnston@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy>=1.26.4",
  "scipy>=1.14.1",
  "matplotlib>=3.9.2",
  "scikit-learn>=1.5.1",
]

[project.urls]
Documentation = "https://github.com/wj2/composite-tangling#readme"
Issues = "https://github.com/wj2/composite-tangling/issues"
Source = "https://github.com/wj2/composite-tangling"

[tool.hatch.version]
path = "composite_tangling/__about__.py"
